--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Splitwise Integration</title>
 </head>
 <body>
-    <h1>Welcome to My Splitwise Integration!</h1>
+    <h1>Welcome to My Splitwise Integration!!</h1>
     <p>This is a placeholder page for my Splitwise integration.</p>
 </body>
 </html>
